Added greyish background behinde modal-container

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c1ac69bc48.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!---<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">-->
 
 </head>
 
 <body>
-    <div class="popup-container hidden" id="popup-container">
-        <button id="close">X</button>
-        <div class="ul-container">
-            <ul>
-                <li><a href="#">Play online</a></li>
-                <li><a href="#">Play on-site</a></li>
-                <li><a href="#">The story</a></li>
-                <li><a href="#">Contact us</a></li>
+    <div class="modal-background hidden">
+        <div class="popup-container " id="popup-container">
+            <button id="close">X</button>
+            <div class="ul-container">
+                <ul>
+                    <li><a href="#">Play online</a></li>
+                    <li><a href="#">Play on-site</a></li>
+                    <li><a href="#">The story</a></li>
+                    <li><a href="#">Contact us</a></li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
     </div>
     <header class="header">
