Removed first set of links and changed prim links

--- a/index.html
+++ b/index.html
@@ -12,25 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c1ac69bc48.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!---<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">-->
-
 </head>
 
 <body>
-    <div class="modal-background hidden">
-        <div class="popup-container " id="popup-container">
-            <button id="close">X</button>
-            <div class="ul-container">
-                <ul>
-                    <li><a href="#">Play online</a></li>
-                    <li><a href="#">Play on-site</a></li>
-                    <li><a href="#">The story</a></li>
-                    <li><a href="#">Contact us</a></li>
 
-                </ul>
-            </div>
-        </div>
-    </div>
     <header class="header">
         <div class="header-container">
             <div class="logo-container">
@@ -38,13 +23,19 @@
                 <h1>Hacker Escape Rooms</h1>
             </div>
             <img src="img/icons8-menu-rounded-50.png" alt="" id="menuBtn">
-
         </div>
-        <nav class="link-container">
-            <a href="#" class="header-links">Play online</a>
-            <a href="#" class="header-links">Play on-site</a>
-            <a href="#" class="header-links">The story</a>
-            <a href="#" class="header-links" id="contact-us-link">Contact us</a>
+        <nav class="modal-background hidden">
+            <div class="popup-container " id="popup-container">
+                <button id="close">X</button>
+                <div class="ul-container">
+                    <ul class="header-links">
+                        <li><a href="#">Play online</a></li>
+                        <li><a href="#">Play on-site</a></li>
+                        <li><a href="#">The story</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <section class="image-container">
